# LearningOpenGL

./: .gitignore  CMakeLists.txt  LearningOpenGL.sln  README.md  old_cmake.txt
src/: demo_main.cpp  main.cpp
src/objects/: ball.h
src/physics/: physics.h
